--- a/Cpld/asic/tx/syn/lgdst_rxglue.qsf
+++ b/Cpld/asic/tx/syn/lgdst_rxglue.qsf
@@ -65,9 +65,6 @@ set_global_assignment -name USE_CONFIGURATION_DEVICE ON
 set_global_assignment -name RESERVE_ALL_UNUSED_PINS "AS INPUT TRI-STATED"
 
 set_global_assignment -name RESERVE_ALL_UNUSED_PINS_NO_OUTPUT_GND "AS INPUT TRI-STATED"
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name ENABLE_SIGNALTAP ON
 set_global_assignment -name USE_SIGNALTAP_FILE stp_files/clk_test.stp
 set_global_assignment -name FLOW_ENABLE_POWER_ANALYZER ON
@@ -93,7 +90,6 @@ set_global_assignment -name CDF_FILE output_files/pin_check.cdf
 set_global_assignment -name CDF_FILE output_files/Chain1.cdf
 set_global_assignment -name SIGNALTAP_FILE stp_files/clk_test.stp
 set_global_assignment -name QIP_FILE flash_pll.qip
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_location_assignment PIN_G8 -to ts_d1
 set_location_assignment PIN_H3 -to ts_d2
 set_location_assignment PIN_H4 -to ts_d3
@@ -104,16 +100,15 @@ set_location_assignment PIN_B1 -to ts_fail
 set_location_assignment PIN_H7 -to reset
 set_location_assignment PIN_B8 -to spi_rts
 set_location_assignment PIN_A6 -to i2sdo0
-set_location_assignment PIN_A2 -to spi0_cs
+set_location_assignment PIN_A3 -to spi0_cs
 set_location_assignment PIN_A8 -to spi0_mosi
 set_location_assignment PIN_F6 -to ad_spi_sdio
-set_location_assignment PIN_A3 -to spi0_clk
+set_location_assignment PIN_A2 -to spi0_clk
 set_location_assignment PIN_A4 -to spi0_miso
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to spi0_cs
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to spi0_mosi
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ts_d4
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ad_spi_sdio
@@ -127,3 +122,4 @@ set_instance_assignment -name RESERVE_PIN AS_INPUT_TRI_STATED -to spi_cs
 set_location_assignment PIN_C8 -to spi_mosi
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to spi_mosi
 set_instance_assignment -name RESERVE_PIN AS_INPUT_TRI_STATED -to spi_mosi
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to spi0_clk
